commit on 'Master'

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <i class="far fa-clipboard"></i>
                 </button>
             </div>
+            <div class="something">
+                Hello world...
+            </div>
             <div class="settings">
                 <div class="setting-category">
                     <span>Password Length</span>
